# live-plotter

./: .gitignore  README.md  pyproject.toml
examples/: notebook_demo.py
src/live_plotter/: __init__.py  viewer.py
